# libaltc

./: README.md  meson.build
include/: altio.h  serio.h
include/serio/: ns16550a.h  sifive.h  ti16750.h
include/serio/uart/: ns16550a.h  sifive.h  ti16750.h
include/uart/: ns16550a.h  sifive.h
src/: getchar.c  getstr.c  meson.build  printf.c  putchar.c  putstr.c  read.c  write.c
src/uart/: ns16550a.c  sifive.c  ti16750.c
